--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,5 @@
 minecraft_version=1.10.2
-forge_version=1.10.2-12.18.0.2007-1.10.0
+forge_version=1.10.2-12.18.0.2008
 mappings=snapshot_20160518
-mod_version=r4.0
-build_number=2
-
-xlib_version=r2.0.1
+mod_version=r4.1
+build_number=0
